--- a/Content/biharmonic-splines.ipynb
+++ b/Content/biharmonic-splines.ipynb
@@ -13,7 +13,9 @@
    "source": [
     "##### References\n",
     "\n",
-    "* paper do Smith 1987"
+    "* Sandwell, David T. 1987. “Biharmonic Spline Interpolation of GEOS-3 and SEASAT Altimeter Data.” Geophysical Research Letters 14 (2): 139–42. https://doi.org/10.1029/GL014i002p00139.\n",
+    "\n",
+    "* Wessel, Paul. 2009. “A General-Purpose Green’s Function-Based Interpolator.” Computers & Geosciences 35 (6): 1247–54. https://doi.org/10.1016/j.cageo.2008.08.012."
    ]
   },
   {
@@ -114,7 +116,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 26"
+    "### Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Preciso revisar o texto"
    ]
   },
   {
