fd e integracao numerica

--- a/Content/fd_intro1.ipynb
+++ b/Content/fd_intro1.ipynb
@@ -39,9 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\n",
-    "u^{\\prime}(t) = -\\alpha \\, u(t) \\: , \\quad 0 > t < T \\: ,\n",
-    "$$"
+    "$u^{\\prime}(t) = -\\alpha \\, u(t) \\: , \\quad 0 < t < T \\: ,$"
    ]
   },
   {
@@ -935,7 +933,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise (extra)"
+    "### Exercise"
    ]
   },
   {
@@ -943,7 +941,7 @@
    "metadata": {},
    "source": [
     "1. Create a function for implementing the algorithm presented above. This function must receive C0, alpha, T, N, theta and return u (calculated function values) and t (mesh points).\n",
-    "2. Test the code by using the specific input values given above and the routine numpy.allclose.\n",
+    "2. Test the code by using the specific input values.\n",
     "3. Generate an exact solution according to the cell below. Generate three numerical solutions with your function, each one with a different theta representing the FE, BE and CN schemes. Plot a figure with the exact solution and the three numerical solutions produced by your function."
    ]
   },
@@ -1023,7 +1021,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
