atualiza readme ateh fourier e os ipynb de fourier

--- a/Content/fourier_1D_2.ipynb
+++ b/Content/fourier_1D_2.ipynb
@@ -248,53 +248,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "which is obtained by substituting $n = 0$ in equations [19b](#eq19b) and [19c](#eq19c). The coefficients $c_{n}$ ([equation 19b](#eq19b)) and $c_{n}^{\\ast}$ ([equation 19c](#eq19c)) are complex functions of the integer $n$. In [equation 19a](#eq19a), these complex functions are evaluated with $n > 0$. However, they can also be evaluated with $n < 0$. Let's analyse the particular case in which the coefficient $c_{n}^{\\ast}$ ([equation 19c](#eq19c)) and, consequently, the coefficients $a_{n}$ ([equation 15](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq15)) and $b_{n}$ ([equation 16](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq16)) are calculated by using $n < 0$. For convenience, let's denote a negative $n$ as $-n$ and the coefficients $a_{n}$ ([equation 15](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq15)), $b_{n}$ ([equation 16](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq16)), and $c_{n}^{\\ast}$ ([equation 19c](#eq19c)) calculated with $-n$ as $c_{-n}^{\\ast}$, $a_{-n}$, and $b_{-n}$, respectively. The coefficients $a_{-n}$, and $b_{-n}$ are given by:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "<a id='eq20a'></a>\n",
+    "which is obtained by substituting $n = 0$ in equations [19b](#eq19b) and [19c](#eq19c). The coefficients $c_{n}$ ([equation 19b](#eq19b)) and $c_{n}^{\\ast}$ ([equation 19c](#eq19c)) are complex functions of the integer $n$. In [equation 19a](#eq19a), these complex functions are evaluated with $n > 0$. However, they can also be evaluated with $n < 0$.\n",
     "\n",
-    "$$\n",
-    "\\begin{split}\n",
-    "a_{-n} &= \\frac{1}{\\pi} \\int \\limits_{-\\pi}^{\\pi} \\overbrace{\\cos \\left( -n \\, x \\right)}^{\\text{even function}} \\, f(x) \\; dx \\\\\n",
-    "&= \\frac{1}{\\pi} \\int \\limits_{-\\pi}^{\\pi} \\cos \\left( n \\, x \\right) \\, f(x) \\; dx \\\\\n",
-    "&= a_{n}\n",
-    "\\end{split} \\quad , \\tag{20a}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "which means that the coefficient $a_{n}$ ([equation 15](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq15)) does not depend on the signal of $n$. On the other hand, by calculating $b_{n}$ ([equation 16](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq16)) with $-n$, we obtain"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='eq20b'></a>\n",
+    "Let's analyse the particular case in which the coefficient $c_{n}$ ([equation 19b](#eq19b)) and, consequently, the coefficients $a_{n}$ ([equation 15](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq15)) and $b_{n}$ ([equation 16](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq16)) are calculated by using $n < 0$. \n",
     "\n",
-    "$$\n",
-    "\\begin{split}\n",
-    "b_{-n} &= \\frac{1}{\\pi} \\int \\limits_{-\\pi}^{\\pi} \\overbrace{\\sin \\left( -n \\, x \\right)}^{\\text{odd function}} \\, f(x) \\; dx \\\\\n",
-    "&= -\\frac{1}{\\pi} \\int \\limits_{-\\pi}^{\\pi} \\sin \\left( n \\, x \\right) \\, f(x) \\; dx \\\\\n",
-    "&= -b_{n}\n",
-    "\\end{split} \\quad , \\tag{20b}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "showing that the use of $-n$ changes the signal of the coefficient $b_{n}$ ([equation 16](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq16)). From $a_{-n}$ and $b_{-n}$, we obtain:"
+    "The coefficients $a_{n}$ ([equation 15](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq15)) do not depend on the signal of $n$ because they are defined by a cosine, which is an even function. On the other hand, the coefficients $b_{n}$ ([equation 16](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/fourier_1D_1.ipynb#eq16)) depends on the signal of $n$ because they are defined by a sine, which is an odd function. Consequently,"
    ]
   },
   {
@@ -304,11 +262,7 @@
     "<a id='eq20c'></a>\n",
     "\n",
     "$$\n",
-    "\\begin{split}\n",
-    "c_{-n}^{\\ast} &= \\frac{1}{2} \\left( a_{-n} + i \\, b_{-n} \\right) \\\\\n",
-    "&= \\frac{1}{2} \\left( a_{n} - i \\, b_{n} \\right) \\\\\n",
-    "&= c_{n}\n",
-    "\\end{split} \\quad , \\tag{20c}\n",
+    "c_{n} = \\frac{1}{2} \\left( a_{n} + i \\, b_{n} \\right) \\: , \\quad \\text{for} \\:\\: n < 0 \\: , \\tag{20c}\n",
     "$$"
    ]
   },
@@ -316,7 +270,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $c_{n}$ is defined in [equation 19b](#eq19b). This equation shows that $c_{-n}^{\\ast}$ is obtained by evaluating the complex function $c_{n}$ ([equation 19b](#eq19b)) with $n < 0$. As a consequence, the second summation in [equation 19a](#eq19a) can be rewritten as follows:"
+    "is equal to $c_{n}^{\\ast}$ ([equation 19c](#eq19c)) for $n > 0$. This equation shows that:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "c_{n} \\, e^{\\, i \\, n \\, x} \\: , \\quad \\text{for} \\:\\: n < 0 \\: ,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "is equal to "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "c_{n}^{\\ast} \\, e^{\\, -i \\, n \\, x} \\: , \\quad \\text{for} \\:\\: n > 0 \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As a consequence, the second summation in [equation 19a](#eq19a) can be rewritten as follows:"
    ]
   },
   {
@@ -580,7 +566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
