aula de fourier

--- a/Content/fourier_1D_1.ipynb
+++ b/Content/fourier_1D_1.ipynb
@@ -702,7 +702,7 @@
    "source": [
     "<a id='ex-extra-intro1'></a>\n",
     "\n",
-    "### Exercise (extra)"
+    "### Exercise"
    ]
   },
   {
@@ -772,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
