define exercicios obrigatorios

--- a/Content/epicenter.ipynb
+++ b/Content/epicenter.ipynb
@@ -914,60 +914,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) In your `my_functions.py` file, create a function for calculating the Jacobian matrix. Your code must look like:\n",
-    "\n",
-    "    def jacobian(variable1, variable2, ...):\n",
-    "        '''\n",
-    "        Brief description of this function\n",
-    "        text text text ...\n",
-    "\n",
-    "        input\n",
-    "        text text text ...\n",
-    "        text text text ...\n",
-    "\n",
-    "        output\n",
-    "        G: numpy array 2D - the Jacobian matrix\n",
-    "        '''\n",
-    "\n",
-    "        assert (condition), 'error message'\n",
-    "        assert (condition1) and (condition2), 'error message'\n",
-    "        \n",
-    "        your code your code your code\n",
-    "        your code your code your code\n",
-    "        your code your code your code\n",
-    "        your code your code your code\n",
-    "        \n",
-    "        return G"
+    "1) In your `my_functions.py` file, create a function for calculating the Jacobian matrix."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2) In your `my_functions.py` file, create a function for calculating the true Hessian matrix. Your code must look like:\n",
-    "\n",
-    "    def hessian(variable1, variable2, ...):\n",
-    "        '''\n",
-    "        Brief description of this function\n",
-    "        text text text ...\n",
-    "\n",
-    "        input\n",
-    "        text text text ...\n",
-    "        text text text ...\n",
-    "\n",
-    "        output\n",
-    "        H: numpy array 2D - the Hessian matrix\n",
-    "        '''\n",
-    "\n",
-    "        assert (condition), 'error message'\n",
-    "        assert (condition1) and (condition2), 'error message'\n",
-    "        \n",
-    "        your code your code your code\n",
-    "        your code your code your code\n",
-    "        your code your code your code\n",
-    "        your code your code your code\n",
-    "        \n",
-    "        return H"
+    "2) In your `my_functions.py` file, create a function for calculating the true Hessian matrix."
    ]
   },
   {
@@ -985,7 +939,7 @@
     "collapsed": true
    },
    "source": [
-    "### Exercise (extra)"
+    "### Exercise"
    ]
   },
   {
