--- a/Content/least_squares.ipynb
+++ b/Content/least_squares.ipynb
@@ -439,7 +439,7 @@
     "\\left[ \\left( \\mathbf{A}^{\\top}\\mathbf{A} \\right)^{-1}\\mathbf{A}^{\\top} \\right]^{\\top} \\: ,\n",
     "$$\n",
     "\n",
-    "where $\\mathbf{\\Sigma_{d}}$ is the covariance matrix of the observed data $\\mathbf{d}$. By considering that the observed data are uncorrelated and have the same covariance $\\sigma_{\\mathbf{d}}^{2}$, the covariance matrix $\\mathbf{\\Sigma}_{\\tilde{\\mathbf{x}}}$ of the estimated parameter vector $\\tilde{\\mathbf{x}}$ assumes the particular form:\n",
+    "where $\\mathbf{\\Sigma_{d}}$ is the covariance matrix of the observed data $\\mathbf{d}$. By considering that the observed data are uncorrelated and have the same variance $\\sigma_{\\mathbf{d}}^{2}$, the covariance matrix $\\mathbf{\\Sigma}_{\\tilde{\\mathbf{x}}}$ of the estimated parameter vector $\\tilde{\\mathbf{x}}$ assumes the particular form:\n",
     "\n",
     "$$\n",
     "\\mathbf{\\Sigma}_{\\tilde{\\mathbf{x}}} = \\sigma_{\\mathbf{d}}^{2} \\left( \\mathbf{A}^{\\top}\\mathbf{A} \\right)^{-1} \\: .\n",
@@ -512,7 +512,7 @@
    "source": [
     "1. Simulate a noise-free data vector `d_free`, a noise-corrupted data vector `d_noise`, and a coordinate vector `x` according to the cells at the end of this Jupyter Notebook.\n",
     "\n",
-    "2. Create a function `straight_line` that receives a data vector `d` and a coordinate vector `x` and returns a numpy array `p` containing the estimated constants $a$ and $b$. Use your previously implemented functions for calculating any matrix operation and/or solving any linear system. Use the `code-template.ipynb` and test the function `straight_line`. Use the noise-free data to test the function `straight_line`.\n",
+    "2. Create a function `straight_line` that receives a data vector `d` and a coordinate vector `x` and returns a numpy array `p` containing the estimated constants $a$ and $b$. Use your previously implemented functions for calculating any matrix operation and/or solving any linear system. Use the noise-free data to test the function `straight_line`.\n",
     "\n",
     "3. Calculate the predicted data at the coordinates `x`. Use your previously implemented functions for calculating any matrix operation.\n",
     "\n",
