--- a/Content/first_steps_Python/SMA/sma-2.ipynb
+++ b/Content/first_steps_Python/SMA/sma-2.ipynb
@@ -13,7 +13,7 @@
     "collapsed": true
    },
    "source": [
-    "The [SMA filter](https://en.wikipedia.org/wiki/Moving_average#Simple_moving_average) can be used for removing noise from a data set and producing a smoother curve, for example."
+    "The [SMA filter](https://en.wikipedia.org/wiki/Moving_average#Simple_moving_average) can be used for removing noise from a data set and producing a smooth curve, for example."
    ]
   },
   {
