--- a/Content/basics-vector.ipynb
+++ b/Content/basics-vector.ipynb
@@ -42,13 +42,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Basic vector operations"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -90,7 +83,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Basic vector operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Scalar-vector multiplication"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{split}\n",
+    "\\mathbf{y} &= a \\, \\mathbf{x} \\\\\n",
+    "&= \\begin{bmatrix} \n",
+    "    a \\, x_{1} \\\\\n",
+    "    a \\, x_{2} \\\\\n",
+    "    \\vdots \\\\\n",
+    "    a \\, x_{N}\n",
+    " \\end{bmatrix}\n",
+    "\\end{split}\n",
+    "$$"
    ]
   },
   {
@@ -117,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +161,7 @@
        "array([0. , 0.5, 1. , 1.5, 2. , 2.5, 3. , 3.5, 4. , 4.5])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +174,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Scalar-vector addition"
+    "#### Vector-vector addition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{split}\n",
+    "\\mathbf{z} &= \\mathbf{x} + \\mathbf{y} \\\\\n",
+    "&= \\begin{bmatrix} \n",
+    "    x_{1} + y_{1} \\\\\n",
+    "    x_{2} + y_{2} \\\\\n",
+    "    \\vdots \\\\\n",
+    "    x_{1} + y_{N}\n",
+    " \\end{bmatrix}\n",
+    "\\end{split}\n",
+    "$$"
    ]
   },
   {
@@ -165,25 +199,58 @@
    "metadata": {},
    "source": [
     "    for i = 1:N\n",
-    "        y[i] = a + x[i]"
+    "        z[i] = x[i] + y[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.arange(7)\n",
+    "y = np.ones(7)*2\n",
+    "z = y + x"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "a = 1"
+    "x"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2., 2., 2., 2., 2., 2., 2.])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "y = a + x"
+    "y"
    ]
   },
   {
@@ -194,7 +261,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+       "array([2., 3., 4., 5., 6., 7., 8.])"
       ]
      },
      "execution_count": 10,
@@ -203,275 +270,190 @@
     }
    ],
    "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y + x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = y + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x/y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This product can be represented as follows:"
+    "z"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import the required stuff"
+    "Be careful! Take a look at the following operation between the vector `x` and a scalar `a`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import my_functions as mf"
+    "a = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3, 4, 5, 6, 7, 8])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from numpy.testing import assert_almost_equal as aae"
+    "x + a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3, 4, 5, 6, 7, 8])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a + x"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Input"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = 4.0\n",
-    "x = np.array([1., 2., 3.])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print x"
+    "Is it mathematically sound?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Result computed with my function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_result = mf.dumb_scalar_vector(a,x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print my_result"
+    "#### Colon notation"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "### Testing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# specific input\n",
-    "b = 3.\n",
-    "y = np.ones(4)\n",
+    "The \"colon notation\" is a handy way of selecting elements in a vector. Let's consider a vector $\\mathbf{x}$ defined as follows:\n",
     "\n",
-    "print y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# expected result\n",
-    "expected_result = np.zeros(4) + 3."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print expected_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# my result\n",
-    "my_result = mf.dumb_scalar_vector(b, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# compare your result with the expected result\n",
-    "aae(my_result, expected_result, decimal=15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# compare your result with an alternative Python implementation\n",
-    "aae(my_result, b*y[:], decimal=15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# compare your result with an alternative Python implementation\n",
-    "aae(my_result, b*y, decimal=15)"
+    "$$\n",
+    "\\mathbf{x} = \\begin{bmatrix}\n",
+    "x_{1} \\\\\n",
+    "x_{2} \\\\\n",
+    "x_{3} \\\\\n",
+    "x_{4} \\\\\n",
+    "x_{5} \\\\\n",
+    "x_{6} \\\\\n",
+    "x_{7} \\\\\n",
+    "x_{8}\n",
+    "\\end{bmatrix} \\quad .\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Take a look at the file `test_my_functions.py`. At the same directory containing the file `my_functions.py`, run the command `python -m pytest test_my_functions.py`."
+    "Now, suppose that we want to create a new vector formed by the elements $x_{3}$, $x_{4}$, $x_{5}$ and $x_{6}$. By using the colon notation, we can do it as follows:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{x}[3:6:1] = \\begin{bmatrix}\n",
+    "x_{3} \\\\\n",
+    "x_{4} \\\\\n",
+    "x_{5} \\\\\n",
+    "x_{6}\n",
+    "\\end{bmatrix} \\quad .\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Timing the code"
+    "Notice that the syntax $\\mathbf{x}[3:6:1]$ specifies the *start* (index 3), *stop* (index 6) and the *step* (equal to 1). We opted for defining the colon notation in this way because it is equivalent to [slicing of numpy arrays](https://docs.scipy.org/doc/numpy/reference/arrays.indexing.html). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a differnece between this notation and the numpy array slicing. To understand this difference, let's create a vector `x` with 8 elements."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = 23.\n",
-    "z = np.random.rand(1000)"
+    "x = np.arange(10, 18)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 11, 12, 13, 14, 15, 16, 17])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%timeit -n 10000 mf.dumb_scalar_vector(c, z)"
+    "x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's repeat the example given above: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([13, 14, 15])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%timeit -n 10000 c*z[:]"
+    "x[3:6:1]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%timeit -n 10000 c*z"
+    "Could you explain the difference between the array slicing and the colon notation defined above?"
    ]
   },
   {
