--- a/Content/hadamard.ipynb
+++ b/Content/hadamard.ipynb
@@ -124,8 +124,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Create a function that receives two numpy arrays and computes the Hadamard product by following the first algorithm shown above (with for). The numpy arrays must have the same size and shape (hint: use an `assert` to verify the input). The function must be written in your `my_functions.py` file, according to the template shown in the notebook `dot.ipynb`.\n",
-    "2. Create three automatic tests in your `test_my_functions.py` file, according to the template shown in the notebook `dot.ipynb`. One of the tests must compare the result obtained by your function and the result obtained by the algorithm which uses the *colon* notation. Another test must set a specific input and compare the result obtained by your function and the expected result. The last test must verify if your function raises an AssertionError, given a specific input."
+    "1. Create a function called `hadamard` that receives two numpy arrays and computes the Hadamard product by following the first algorithm shown above (with for). The numpy arrays must have the same size and shape (hint: use an `assert` to verify the input). The function must be written in your `my_functions.py` file, according to the template shown in the notebook `dot.ipynb`.\n",
+    "2. Create three tests in your `test_my_functions.py` file, according to the template shown in the notebook `dot.ipynb`. One of the tests must compare the result obtained by your function and the result obtained by the algorithm which uses the *colon* notation. Another test must set a specific input and compare the result obtained by your function and the expected result. The last test must verify if your function raises an AssertionError, given a specific input."
    ]
   },
   {
@@ -155,21 +155,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
