--- a/Content/outer.ipynb
+++ b/Content/outer.ipynb
@@ -53,29 +53,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Kronecker (or direct, or [outer](https://en.wikipedia.org/wiki/Outer_product)) product is defined as follows:"
+    "The [outer](https://en.wikipedia.org/wiki/Outer_product) product is defined as follows:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\begin{split}\n",
-    "\\mathbf{M} & = \\mathbf{x} \\otimes \\mathbf{y}^{\\top} \\\\\n",
-    "           & = \\left[\n",
-    "                \\begin{array}{c}\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "\\mathbf{M} &= \\mathbf{x} \\otimes \\mathbf{y} \\\\\n",
+    "           &= \\mathbf{x} \\cdot \\mathbf{y}^{\\top} \\\\\n",
+    "           &= \\begin{bmatrix}\n",
     "                x_{1} \\, \\mathbf{y}^{\\top} \\\\\n",
-    "                x_{2} \\, \\mathbf{y}^{\\top}\\\\\n",
+    "                x_{2} \\, \\mathbf{y}^{\\top} \\\\\n",
     "                \\vdots \\\\\n",
     "                x_{N} \\, \\mathbf{y}^{\\top}\n",
-    "                \\end{array}\n",
-    "                \\right]_{N \\times M} \\\\\n",
-    "           & = \\left[\n",
-    "                \\begin{array}{ccc}\n",
+    "              \\end{bmatrix}_{\\, N \\times M} \\\\\n",
+    "           &= \\begin{bmatrix}\n",
     "                y_{1} \\, \\mathbf{x} & \\dots & y_{N} \\, \\mathbf{x}\n",
-    "                \\end{array}\n",
-    "                \\right]_{N \\times M}\n",
-    "\\end{split} \\: .$$"
+    "              \\end{bmatrix}_{\\, N \\times M}\n",
+    "\\end{split} \\: .\n",
+    "$$"
    ]
   },
   {
@@ -142,8 +141,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Implement the three algoritms shown above for computing the outer product between two numpy arrays. Each algorithm must be in a different function. All functions must receive two numpy arrays and return the outer product. The numpy arrays may have different sizes. The functions must be written in your `my_functions.py` file, according to the template shown in the notebook `dot.ipynb`.\n",
-    "2. Create four automatic tests in your `test_my_functions.py` file, according to the template shown in the notebook `dot.ipynb`. One test must compare the result obtained all your functions and the result obtained by the function [`numpy.outer`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.outer.html) (see the example below). The other three tests must set a specific input and compare the expected result and the result obtained by each of your functions."
+    "1. Create three functions called `outer1`, `outer2` and `outer3` to implement the three algoritms shown above. All functions must receive two numpy arrays and return the outer product. The numpy arrays may have different sizes. The functions must be written in your `my_functions.py` file, according to the template shown in the notebook `dot.ipynb`.\n",
+    "2. Create four automatic tests in your `test_my_functions.py` file, according to the template shown in the notebook `dot.ipynb`. One test must compare the result obtained by all your functions and the result obtained by the function [`numpy.outer`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.outer.html) (see the example below). The other three tests must set a specific input and compare the expected result and the result obtained by each of your functions."
    ]
   },
   {
@@ -270,21 +269,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
