matrix-vector and matrix-matrix products

--- a/Content/matrix-vector.ipynb
+++ b/Content/matrix-vector.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once defined these partitions, we can define the product $\\mathbf{y} = \\mathbf{A} \\mathbf{x}$ by using three different approaches:"
+    "After defining these partitions, we can define the product $\\mathbf{y} = \\mathbf{A} \\mathbf{x}$ by using three different approaches:"
    ]
   },
   {
@@ -105,15 +105,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -126,7 +117,7 @@
    "source": [
     "Show that these three approaches are equivalent. To do this, follow the steps below:\n",
     "\n",
-    "1. In your `my_functions.py` file, create 3 functions. Each function must implement one of the 3 algorithms shown above. Follow the template presented in the [`dot.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/dot.ipynb). All functions must return the resultant vector, given a matrix and a vector.\n",
+    "1. In your `my_functions.py` file, create 3 functions called `matvec_prod1`, `matvec_prod2` and `matvec_prod3`. Each function must implement one of the 3 algorithms shown above. Follow the template presented in the [`dot.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/dot.ipynb). All functions must receive a matrix and a vector and must return the resultant vector.\n",
     "2. For each function created in the previous item, create 2 tests in your `test_my_functions.py`. One test must compare the result produced by your function and an expected result produced by a specific input. The other test must compare the result produced by your function and the result produced by the routine [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html) (see the example shown below). Follow the template presented in the [`dot.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/dot.ipynb).\n",
     "3. *Extra*: use the `%timeit` to compare your functions and the function `numpy.dot`."
    ]
@@ -244,15 +235,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -321,10 +303,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Show that this formulation is equivalent to that presented previously. To do that,\n",
+    "Show that this formulation is equivalent to that presented previously. To do that:\n",
     "\n",
-    "1. Create a function that calculates the moving average filter by using the matrix-vector product and save it in your `my_functions.py` file. This function must receive two arguments: the data vector and the number of points forming the moving window. This function must create the matrix $\\mathbf{A}$ and call one of the three functions created in the previous exercise for calculating the matrix-vector product.\n",
-    "2. In your `test_my_functions.py` file, create a test to compare the results produced by this function and the results produced by the previously presented simple moving average filter (`first_steps_Python\\SMA\\`)."
+    "1. Create a function called `mat_sma`, in your `my_functions.py` file, to calculate the moving average filter by using the matrix-vector product. This function must receive two arguments: the data vector and the number of points forming the moving window. This function must create the matrix $\\mathbf{A}$ and use one of your three functions for calculating the matrix-vector product.\n",
+    "2. In your `test_my_functions.py` file, create a test to compare the results produced by this function and the results produced by that one presented in `first_steps_Python\\SMA\\`."
    ]
   },
   {
@@ -393,15 +375,6 @@
    "source": [
     "A"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -479,8 +452,8 @@
    "source": [
     "Based on this introduction,\n",
     "\n",
-    "1. In your `my_functions.py` file, create a function that receives a $N \\times 1$ data vector $\\mathbf{y}$ and return the first derivatives calculated according to the matrix-vector product presented above. The function must call one your functions for calculating the matrix-vector product. Hint: modify the algorithm for creating the matrix $\\mathbf{A}$ presented in the previous exercise to create the matrix $\\mathbf{D}$ automatically.\n",
-    "2. In your `test_my_function.py` file, create a test for the function created in the previous item. In this test, create a vector `theta` with the function [`numpy.arange`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html), by using the arguments `0.`, `2*np.pi`, `dtheta`, where `dtheta = 2.*np.pi/1000`. Create a data vector `y` by using the [`numpy.sin`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.sin.html) function. Then, calculate a vector `z_true` by using the [`numpy.cos`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.cos.html) function. Finally, calculate a `z_calc` vector with your function and compare with the `z_true` vector by using the routine [`numpy.testing.assert_almost_equal`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.testing.assert_almost_equal.html). In the routine `numpy.testing.assert_almost_equal`, use `decimal = 3`. Remember that the first and last elements of `z_calc` will be equal to zero. Be careful!"
+    "1. In your `my_functions.py` file, create a function called `deriv1d` that receives a $N \\times 1$ data vector $\\mathbf{y}$ and returns the first derivatives calculated according to the matrix-vector product presented above. The function must use one your functions for calculating the matrix-vector product. Hint: modify the algorithm for creating the matrix $\\mathbf{A}$ presented in the previous exercise to create the matrix $\\mathbf{D}$ automatically.\n",
+    "2. In your `test_my_function.py` file, create one test for your function `deriv1d`. In this test, create a vector `theta` with the function [`numpy.arange`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.arange.html), by using the arguments `0.`, `2*np.pi`, `dtheta`, where `dtheta = 2.*np.pi/1000`. Create a data vector `y` by using the [`numpy.sin`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.sin.html) function. Then, calculate a vector `z_true` by using the [`numpy.cos`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.cos.html) function. Finally, calculate a `z_calc` vector with your function `deriv1d` and compare with the `z_true` vector by using the routine [`numpy.testing.assert_almost_equal`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.testing.assert_almost_equal.html). In the routine `numpy.testing.assert_almost_equal`, use `decimal = 3`. Remember that the first and last elements of `z_calc` will be equal to zero. Be careful!"
    ]
   },
   {
@@ -496,21 +469,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
