--- a/Content/matrix-matrix.ipynb
+++ b/Content/matrix-matrix.ipynb
@@ -144,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The matrix $\\mathbf{C}$ can be calculated by following different formulations:"
+    "The matrix $\\mathbf{C}$ can be calculated by following different approaches:"
    ]
   },
   {
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3) Matrix-vector product formulation (row update)"
+    "#### 3) Vector-matrix product formulation (row update)"
    ]
   },
   {
@@ -199,14 +199,14 @@
    "metadata": {},
    "source": [
     "    for i = 1:N\n",
-    "        C[i,:] = dot(A[i,:],B[:,:])"
+    "        C[i,:] = vecmat(A[i,:],B[:,:])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the i- and k-loops were removed."
+    "Notice that the i- and k-loops were removed. It is also important to notice that `A[i,:]` is a row vector and `B[:,:]` is a matrix. Could this operation be rewritten in terms of the product between `B[:,:]` and `A[i,:]`?"
    ]
   },
   {
@@ -221,7 +221,7 @@
    "metadata": {},
    "source": [
     "    for j = 1:L\n",
-    "        C[:,j] = dot(A[:,:],B[:,j])"
+    "        C[:,j] = matvec(A[:,:],B[:,j])"
    ]
   },
   {
@@ -306,8 +306,8 @@
    "source": [
     "Show that these five approaches are equivalent. To do this, follow the steps below:\n",
     "\n",
-    "1. In your `my_function.py` file, create 5 functions for implementing the 5 algorithms shown above. All functions must receive 2 matrices and return the resultant matrix.\n",
-    "2. In your `test_my_function.py` file, create 2 tests for each function created in the previous item. One test must compare the result produced by your function and an expected result produced by a specific input. The other test must compare the result produced by your function and the result produced by the routine [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html) (see the example presented below).\n",
+    "1. In your `my_function.py` file, create 5 functions called `matmat_prod1`, `matmat_prod2`, `matmat_prod3`, `matmat_prod4` and `matmat_prod5` for implementing the 5 algorithms shown above, respectively. All functions must receive 2 matrices and return the resultant matrix.\n",
+    "2. In your `test_my_function.py` file, create 2 tests for each function. One test must compare the result produced by your function and an expected result produced by a specific input. The other test must compare the result produced by your function and the result produced by the routine [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html) (see the example presented below).\n",
     "3. *Extra*: use the `%timeit` to compare your functions and the function `numpy.dot`."
    ]
   },
@@ -366,15 +366,6 @@
    "source": [
     "print C"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -446,7 +437,7 @@
    "source": [
     "Show that these matrices are orthogonal. To do this, follow the steps below:\n",
     "\n",
-    "1. In your `my_functions.py` file, create 3 functions. Each function must receive an angle $\\theta$, in degrees, and return one of the rotation matrices shown above.\n",
+    "1. In your `my_functions.py` file, create 3 functions called `R1`, `R2` and `R3`. Each function must receive an angle $\\theta$, in degrees, and return one of the rotation matrices shown above.\n",
     "2. In your `test_my_functions.py`, create 3 tests. Each test must verify if a particular rotation matrix is orthogonal. The tests must use your functions for computing the product between matrices."
    ]
   },
@@ -463,21 +454,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
