define Frobenious and p norms for matrices

--- a/Content/matrix-norms.ipynb
+++ b/Content/matrix-norms.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A [matrix norm](https://en.wikipedia.org/wiki/Matrix_norm) is a scalar function $f(\\mathbf{A})$ satisfying the folllowing conditions:\n",
+    "A [matrix norm](http://mathworld.wolfram.com/MatrixNorm.html) is a scalar function $f(\\mathbf{A})$ satisfying the folllowing conditions:\n",
     "\n",
     "$$\n",
     "\\begin{split}\n",
@@ -54,14 +54,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is a useful class of norms called *p-norms*:\n",
+    "A famous matrix norm is the Frobenius norm $\\| \\mathbf{A} \\|_{F}$:\n",
     "\n",
     "$$\n",
     "\\begin{split}\n",
-    "f_{p}(\\mathbf{x}) \n",
-    "&= \\| \\mathbf{x} \\|_{p} \\\\\n",
-    "&= \\left( \\, \\mid x_{1} \\mid^{p} + \\cdots + \\mid x_{N} \\mid^{p} \\, \\right)^{\\frac{1}{p}}, \\quad p \\geq 1\n",
-    "\\end{split}\n",
+    "\\| \\mathbf{A} \\|_{F} &= \\sqrt{\\sum\\limits_{i = 1}^{N}\\sum\\limits_{j = 1}^{M} \\mid a_{ij} \\mid^{2}} \\\\\n",
+    "&= \\sqrt{\\mathrm{Tr}\\left(\\mathbf{A}^{\\top}\\mathbf{A}\\right)}\n",
+    "\\end{split} \\quad .\n",
     "$$"
    ]
   },
@@ -69,21 +68,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are three important $p$-norms: "
+    "Similarly to vector norms, there is also an important class of matrix norms called $p$-norms. Three important norms are: "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2-norm\n",
+    "#### 2-norm (p = 2)\n",
     "\n",
     "$$\n",
-    "\\begin{split}\n",
-    "\\| \\mathbf{x} \\|_{2} \n",
-    "&= \\left( \\, \\mid x_{1} \\mid^{2} + \\cdots + \\mid x_{N} \\mid^{2} \\, \\right)^{\\frac{1}{2}}\n",
-    "&= \\sqrt{\\left( \\mathbf{x}^{\\top}\\mathbf{x} \\right)}\n",
-    "\\end{split}\n",
+    "\\| \\mathbf{A} \\|_{2} = \\sqrt{\\sigma_{max} \\left(\\mathbf{A}^{\\top}\\mathbf{A} \\right)}\n",
     "$$"
    ]
   },
@@ -91,10 +86,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1-norm\n",
+    "#### 1-norm (p = 1)\n",
     "\n",
     "$$\n",
-    "\\| \\mathbf{x} \\|_{1} = \\mid x_{1} \\mid + \\cdots + \\mid x_{N} \\mid\n",
+    "\\| \\mathbf{A} \\|_{1} = \\max\\limits_{1 \\leq j \\leq M} \\, \\sum\\limits_{i = 1}^{N} \\mid a_{ij} \\mid\n",
     "$$"
    ]
   },
@@ -102,10 +97,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### $\\infty$-norm\n",
+    "#### $\\infty$-norm (p = $\\infty$)\n",
     "\n",
     "$$\n",
-    "\\| \\mathbf{x} \\|_{\\infty} = \\max\\limits_{1 \\leq i \\leq N} \\, \\mid x_{i} \\mid\n",
+    "\\| \\mathbf{A} \\|_{\\infty} = \\max\\limits_{1 \\leq i \\leq N} \\, \\sum\\limits_{j = 1}^{M} \\mid a_{ij} \\mid\n",
     "$$"
    ]
   },
@@ -120,10 +115,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hölder inequality\n",
+    "Property of $p$-norms\n",
     "\n",
     "$$\n",
-    "\\mid \\mathbf{x}^{\\top}\\mathbf{y} \\mid \\leq \\| \\mathbf{x} \\|_{p} \\| \\mathbf{y} \\|_{q} \\: , \\quad \\frac{1}{p} + \\frac{1}{q} = 1\n",
+    "\\| \\mathbf{A} \\mathbf{x} \\|_{p} \\leq \\| \\mathbf{A} \\|_{p} \\| \\mathbf{x} \\|_{p}\n",
     "$$"
    ]
   },
@@ -131,29 +126,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cauchy-Schwarz inequality\n",
-    "\n",
-    "$$\n",
-    "\\mid \\mathbf{x}^{\\top}\\mathbf{y} \\mid \\leq \\| \\mathbf{x} \\|_{2} \\| \\mathbf{y} \\|_{2}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Relationship between these norms\n",
+    "Relationship $2$-norm and norms $1$ and $\\infty$\n",
     "\n",
     "$$\n",
     "\\| \\mathbf{x} \\|_{2} \\leq \\| \\mathbf{x} \\|_{1} \\leq \\sqrt{N} \\, \\| \\mathbf{x} \\|_{2}\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "\\| \\mathbf{x} \\|_{\\infty} \\leq \\| \\mathbf{x} \\|_{2} \\leq \\sqrt{N} \\, \\| \\mathbf{x} \\|_{\\infty}\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "\\| \\mathbf{x} \\|_{\\infty} \\leq \\| \\mathbf{x} \\|_{1} \\leq N \\, \\| \\mathbf{x} \\|_{\\infty}\n",
     "$$"
    ]
   },
